HTML outline of scorecard

--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
+                <h1 class="home-score">0</h1>
+                <div class="home-btns">
+                    <button class="home1" onclick="addOneHome()">+1</button>
+                    <button class="home2" onclick="addTwoHome()">+2</button>
+                    <button class="home3" onclick="addThreeHome()">+3</button>
+                </div>
             </div>
             <div>
                 <h3>GUEST</h3>
+                <h1 class="guest-score">0</h1>
+                <div class="guest-btns">
+                    <button class="guest1" onclick="addOneGuest()">+1</button>
+                    <button class="guest2" onclick="addTwoGuest()">+2</button>
+                    <button class="guest3" onclick="addThreeGuest()">+3</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
